# structural-matrix-analysis

./: .gitignore  .pdm.toml  LICENSE  README.md  Resultados - Exemplo Lista Teoria 2.txt  Resultados - Exemplo Livro.txt  pyproject.toml  requirements.txt  results.txt
Frame/: Frame_2D.py
Frame/data/: Exemplo 1 - Pórtico Livro.txt  Exemplo 1 - Pórtico.txt  Exemplo 2 - Pórtico.txt  Exemplo 3 - Pórtico.txt  Exemplo 4 - Pórtico.txt  Resultados - Exemplo 1 - Pórtico.txt  Resultados - Exemplo 2 - Pórtico.txt  Resultados - Exemplo 3 - Pórtico.txt  Resultados - Exemplo 4 - Pórtico.txt
Frame/template/: template_results.txt
Truss/: Truss_2D.py
Truss/data/: Exemplo Lista Teoria 2.txt  Exemplo Livro.txt  exemplo_livro.txt  truss2d_input_file.txt
