[tool.poetry]
name = "structural-matrix-analysis"
version = "1.0.0"
description = "Pacote para resolver estruturas utilizando a abordagem matricial do método dos deslocamentos"
authors = ["Matheus Amancio Miranda <matheus.amancio98@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
