[project]
name = "structural-matrix-analysis"
version = "1.0.0"
description = "Códigos desenvolvidos durante a disciplina Análise Matricial de Estruturas"
authors = [
    {name = "Matheus Amancio Miranda", email = "matheus.amancio98@gmail.com"},
]
dependencies = [
    "numpy>=1.23.5",
    "matplotlib>=3.6.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
]
